feat: rename connectortransformationerror to connectorerror and connector 4xx and 5xx as connectorerror exception in sdk (#928)
Co-authored-by: Jagan Elavarasan <jaganelavarasan@gmail.com>
Co-authored-by: Jeeva0104 <jeeva.ramachandran@juspay.in>
Co-authored-by: Jeeva Ramachandran <120017870+JeevaRamu0104@users.noreply.github.com>